# gnome-openweather

./: .eslintrc.yml  .gitignore  AUTHORS  CHANGELOG  CHANGELOG.md  Makefile  Makefile.am  README.md  The Dark Sky Forecast API Docs.html  autogen.sh  configure.ac  gnome-shell-extension-openweather.bmarks  gnome-shell-extension-openweather.cbp  gnome-shell-extension-openweather.cscope_file_list  gnome-shell-extension-openweather.layout  gnome-shell-extension-openweather.spec  gnome-shell-extension-weather.cbp  metadata.json  nest-test.sh  openweather-search.ui  search.txt  temp.txt  updateChangeLog.sh  update_revision.sh
data/: #weather-settings_2.ui#  Makefile.am  metadata.json.in  org.gnome.shell.extensions.openweather.gschema.xml  org.gnome.shell.extensions.openweather.gschema.xml.in  org.gnome.shell.extensions.weather.gschema.xml.in  stylesheet.css  weather-settings.ui  weather-settings_2.ui
po/: LINGUAS  Makevars  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  eu.po  fi.po  fr.po  gnome-shell-extension-openweather.pot  gnome-shell-extension-weather.pot  he.po  hu.po  id.po  it.po  ja.mo  ja.po  lt.po  nb.po  nl.po  openweather.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  update.js  (+3 more)
providers/: openweathermap.jsonc
schemas/: org.gnome.shell.extensions.openweather.gschema.xml  org.gnome.shell.extensions.openweather2.gschema.xml  org.gnome.shell.extensions.openweatherrefined.gschema.xml  provider.schema.json
src/: Makefile.am  constants.js  convenience.js  darksky_net.js  extension.js  extension_test.js  fetch_data_base.js  forecast_io.js  getweather.js  location.js  locs.js  migration.js  myloc.js  openweathermap.js  openweathermap_org.js  prefs.css  prefs.js  providerFile.js  stylesheet.css  unitPresets.js  utils.js  weather-settings.ui  weathericons.js
src/preferences/: aboutPage.js  generalPage.js  layoutPage.js  locationsPage.js  searchResultsWindow.js
(+7 files in other folders)
