# Change these to modify how installation is performed
topextensiondir = $(datadir)/gnome-shell/extensions

uuid = openweather-extension@jenslody.de

extensiondir = $(topextensiondir)/$(uuid)

dist_extension_DATA = extension.js forecast_io.js openweathermap_org.js convenience.js prefs.js

nodist_extension_DATA = $(EXTRA_EXTENSION)
