# Change these to modify how installation is performed
topextensiondir = $(datadir)/gnome-shell/extensions

uuid = openweather@skrewball

extensiondir = $(topextensiondir)/$(uuid)

dist_extension_DATA = extension.js darksky_net.js openweathermap_org.js prefs.js

nodist_extension_DATA = $(EXTRA_EXTENSION)
